--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "auth",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nexgenfront.github.io",
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
@@ -26,7 +27,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --log-level warn --write \"**/*.{jsx,js,css,scss}\""
+    "format": "prettier --log-level warn --write \"**/*.{jsx,js,css,scss}\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
