--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "auth",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nexgenfront.github.io",
+  "homepage": "https://ngtechsolutions.github.io/frontend/",
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
